Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 2.7.0
-
Fix Version/s: Qt Creator 2.8.0-beta
-
Component/s: Android Support
-
Labels:None
Description
We currently offer a hard to understand choice.
We should simplify that to the following:
"Ministro",
"Bundle libraries",
"Local debug deployment"
The option to install ministro from a apk is orthogonal to the way the app is deployed and thus does not fit into that set. It should be grouped with "clean libs on devie". And it might make sense to move both of those actions to e.g. the menu.
Attachments
Issue Links
- replaces
-
QTCREATORBUG-8648 Narrow down deployment options to concrete use cases
-
- Closed
-