Android Deploy Options: Clean up ui

Task-number: QTCREATORBUG-9208

Change-Id: I1b1864908a24af3cd7c576831656267a6390b583
Reviewed-by: BogDan Vatra <bogdan@kde.org>