src/plugins/android/androiddeploystepwidget.h
@@ -49,10 +49,11 @@ public:
     ~AndroidDeployStepWidget();
 
 private slots:
-    void resetAction();
+    void setMinistro();
     void setDeployLocalQtLibs();
+    void setBundleQtLibs();
+
     void setQASIPackagePath();
-    void useLocalQtLibsStateChanged(int);
     void cleanLibsOnDevice();
 
 private:
